Update module-info.java and pom.xml